; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/usb/controller/extr_dwc_otg_hisi.c_hisi_dwc_otg_attach.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/usb/controller/extr_dwc_otg_hisi.c_hisi_dwc_otg_attach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dwc_otg_fdt_softc = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@DWC_MODE_HOST = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @hisi_dwc_otg_attach to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hisi_dwc_otg_attach(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.dwc_otg_fdt_softc*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call %struct.dwc_otg_fdt_softc* @device_get_softc(i32 %4)
  store %struct.dwc_otg_fdt_softc* %5, %struct.dwc_otg_fdt_softc** %3, align 8
  %6 = load i32, i32* @DWC_MODE_HOST, align 4
  %7 = load %struct.dwc_otg_fdt_softc*, %struct.dwc_otg_fdt_softc** %3, align 8
  %8 = getelementptr inbounds %struct.dwc_otg_fdt_softc, %struct.dwc_otg_fdt_softc* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  store i32 %6, i32* %9, align 4
  %10 = load i32, i32* %2, align 4
  %11 = call i32 @dwc_otg_attach(i32 %10)
  ret i32 %11
}

declare dso_local %struct.dwc_otg_fdt_softc* @device_get_softc(i32) #1

declare dso_local i32 @dwc_otg_attach(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
